# WebCCE

./: LICENSE  index.html  register.html  registerstyle.css  signup.js  style.css
backend/: Cargo.toml
backend/src/: auth.rs  chat.rs  files.rs  login.rs  main.rs  mainbu.rs  signup.rs  state.rs  ws.rs
public/: chat.css  chat.html  chat.js  index.html  index.js  login.html  login.js  loginstyle.css  register.html  registerstyle.css  script.js  signup.html  signup.js  signupstyle.css  style.css
webcce/: README.md
webcce/backend/src/: ws.rs
webcce/public/: index.html  login.js  script.js  signup.html
