[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = { version = "0.14", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.21.3"
bcrypt = "0.17.0"
argon2 = { version = "0.5", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }