[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] } # Add "trace" feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
bcrypt = "0.15.0"
argon2 = { version = "0.5", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
futures = "0.3"
tracing = "0.1"                 # NEW! Add this line
tracing-subscriber = { version = "0.3", features = ["env-filter"] }